--- a/index.html
+++ b/index.html
@@ -7,14 +7,26 @@
         <link rel="stylesheet" href="style/main.css">
     </head>
 
-    <section class="container">
-        <body>
-            <img src="images/thailand_flag_background.jpg">
-            <h1></h1>
-        </body>
+      <body>
+          <section class="container">
+              <nav>
+                  <ul>
+                      <li><a href="#">Home<a/></li>
+                      <li><a href="#">Menu</a></li>
+                      <li><a href="#">About Us</a></li>
+                      <li><a href="#">Press></a></li>
+                      <li><a href="#">Contact Us></a></li>
+                      <li><a href="#">Oreder Online></a></li>
+                  </ul>
+              </nav>
 
-        <footer>
-            Copyright &copy; 2016. All rights reserved.
-        </footer>
-    </section>
+              <div class="background-image">
+                  <img src="images/thailand_flag_background.jpg">
+              </div>
+
+              <footer>
+                  Copyright &copy; 2016. All rights reserved.
+              </footer>
+          </section>
+      </body>
 </html>
